Closed
Bug 1444361
Opened 4 years ago
Closed 4 years ago
216.36 - 534.99% tp5o_webext responsiveness (windows10-64, windows7-32) regression on push 22ba4f32a7af (Thu Mar 8 2018)
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
RESOLVED
FIXED
mozilla60
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox58 | --- | unaffected |
firefox59 | --- | unaffected |
firefox60 | --- | fixed |
People
(Reporter: igoldan, Assigned: bugzilla)
References
Details
(Keywords: perf, regression, talos-regression)
Attachments
(1 file)
3.97 KB,
patch
|
chutten|PTO
:
review+
|
Details | Diff | Splinter Review |
Talos has detected a Firefox performance regression from push: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=7daaf289c085e05e0e4a0327a13748002fb467a0&tochange=22ba4f32a7afe64038a38cd2e1fc16ede661f9ab As author of one of the patches included in that push, we need your help to address this regression. Regressions: 535% tp5o_webext responsiveness windows7-32 opt e10s stylo 3.48 -> 22.08 216% tp5o_webext responsiveness windows10-64 opt e10s stylo 3.17 -> 10.04 Improvements: 2% tp5o_webext osx-10-10 opt e10s stylo 397.37 -> 388.89 You can find links to graphs and comparison views for each of the above tests at: https://treeherder.mozilla.org/perf.html#/alerts?id=12015 On the page above you can see an alert for each affected platform as well as a link to a graph showing the history of scores for this test. There is also a link to a treeherder page showing the Talos jobs in a pushlog format. To learn more about the regressing test(s), please see: https://wiki.mozilla.org/Buildbot/Talos/Tests For information on reproducing and debugging the regression, either on try or locally, see: https://wiki.mozilla.org/Buildbot/Talos/Running *** Please let us know your plans within 3 business days, or the offending patch(es) will be backed out! *** Our wiki page outlines the common responses and expectations: https://wiki.mozilla.org/Buildbot/Talos/RegressionBugsHandling
Reporter | ||
Updated•4 years ago
|
Component: Untriaged → Crash Reporting
Product: Firefox → Toolkit
Reporter | ||
Comment 1•4 years ago
|
||
:aklotz I see bug 1434489 caused some big regressions on our Windows OPT builds. The PGO builds don't seem affected. Can you please look over this performance drop?
Flags: needinfo?(aklotz)
Assignee | ||
Comment 2•4 years ago
|
||
I'm kind of surprised that Talos caught this given that the modules ping is so infrequent. Anyway, I see a problem that would affect perf, so I will fix that.
Flags: needinfo?(aklotz)
Assignee | ||
Comment 3•4 years ago
|
||
Comment 4•4 years ago
|
||
Comment on attachment 8957664 [details] [diff] [review] Move gathering of cert info off main thread Review of attachment 8957664 [details] [diff] [review]: ----------------------------------------------------------------- Looks good. One question about maybe using a utility function. ::: toolkit/components/telemetry/Telemetry.cpp @@ +908,5 @@ > #if defined(XP_WIN) > // Cert Subject. > + nsString* subject = mCertSubjects.GetValue(info.GetModulePath()); > + if (subject) { > + JS::RootedString jsOrg(cx, JS_NewUCStringCopyN(cx, subject->get(), Can you use froydnj's new ToJSString (from TelemetryCommon) here?
Attachment #8957664 -
Flags: review?(chutten) → review+
Assignee | ||
Comment 5•4 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/017dbfcb23698b9484a4467221e86a0dca980326 Bug 1444361: Don't obtain cert subject info on main thread; r=chutten
Comment 6•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/017dbfcb2369
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox60:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Updated•4 years ago
|
status-firefox58:
--- → unaffected
status-firefox59:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Reporter | ||
Comment 7•4 years ago
|
||
I confirm this got fixed: == Change summary for alert #12047 (as of Fri, 09 Mar 2018 18:25:13 GMT) == Improvements: 74% tp5o_webext responsiveness windows7-32 opt e10s stylo 12.98 -> 3.33 67% tp5o_webext responsiveness windows10-64 opt e10s stylo 9.65 -> 3.19 For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=12047
You need to log in
before you can comment on or make changes to this bug.
Description
•