Bug 1444361: Don't obtain cert subject info on main thread; r=chutten